# xtts-api-server

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  build.ps1  docker-compose.yaml  launcher.bat  manual.py  pyproject.toml  requirements.txt  test_ulaw.py
models/: readme.md
output/: readme.md
speakers/: readme.md
xtts_api_server/: server.py  server_old.py  server_v2.py
