[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xtts-api-server"
version = "1.0.0"
authors = [
  { name="AdrianXira", email="adrian.sosa@xira.ai" },
]
description = "A simple FastAPI server to host XTTSv2, A modified version of xtts-api-server "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "PyAudio==0.2.14",
  "requests==2.31.0",
  "pyttsx3==2.90",
  "stream2sentence==0.2.2",
  "fastapi>=0.104.1",
  "loguru",
  "pydantic",
  "pydub",
  "python-dotenv",
  "torch",
  "torchaudio",
  "uvicorn",
  "cutlet",
  'fugashi[unidic-lite]',
  'coqui-tts[languages]==0.24.1',
  'transformers==4.36.2',
  "uuid",
  "spacy==3.7.2",
]

[project.urls]
Homepage = "https://github.com/AdrianXira/xtts-api-server"
"Bug Tracker" = "https://github.com/AdrianXira/xtts-api-server/issues"

[tool.hatch.build.targets.wheel]
only-include=["xtts_api_server"]